# pyriodicity

./: .codecov.yaml  .flake8  .gitignore  .readthedocs.yaml  CITATION.cff  LICENSE  README.md  justfile  pyproject.toml  requirements-dev.txt  requirements-doc.txt  requirements-docs.txt  requirements.txt
.github/workflows/: ci.yml  pre-release.yml  release.yml
auto_period_finder/: __init__.py  finder.py  finder_acf.py  finder_fourier.py
auto_period_finder/enums/: __init__.py  _enums.py
auto_period_finder/finders/: __init__.py  finder.py  finder_acf.py  finder_autoperiod.py  finder_fourier.py
auto_period_finder/tools/: __init__.py  _tools.py
docs/: api.rst  conf.py  dev.rst  environment.rst  example.rst  guide.rst  index.rst  requirements.txt  usage.rst
docs/_static/: custom-icons.js  pypi-icon.js
docs/_templates/autosummary/: class.rst  method.rst
docs/reference/: index.rst
pyriodicity/: __init__.py
pyriodicity/_internal/: online_helper.py  utils.py
pyriodicity/detectors/: __init__.py  acf.py  autoperiod.py  cfd_autoperiod.py  fft.py  online_fft.py  robustperiod.py
pyriodicity/finders/: __init__.py  finder_acf.py  finder_autoperiod.py  finder_fourier.py
pyriodicity/online/: __init__.py  online_acf.py  online_fft.py
pyriodicity/static/: __init__.py  acf.py  autoperiod.py  cfd_autoperiod.py  fft.py  robustperiod.py  sazed.py
pyriodicity/tools/: __init__.py  _online_helper.py  _online_tools.py  _tools.py
src/pyriodicity/_internal/: online_helper.py  utils.py
src/pyriodicity/online/: online_acf.py  online_fft.py
src/pyriodicity/static/: acf.py  autoperiod.py  cfd_autoperiod.py  robustperiod.py  sazed.py
tests/: conftest.py  test_finder.py  test_finder_acf.py  test_finder_fourier.py
tests/data/: co2.csv
tests/detectors/: conftest.py  test_acf.py  test_autoperiod.py  test_cfd_autoperiod.py  test_fft.py  test_robustperiod.py
tests/finders/: test_finder.py  test_finder_acf.py  test_finder_autoperiod.py  test_finder_fourier.py
tests/online/: test_online_acf.py  test_online_fft.py
tests/static/: test_acf.py  test_autoperiod.py  test_cfd_autoperiod.py  test_fft.py  test_robustperiod.py  test_sazed.py
