[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "pyriodicity"
version = "0.6.0rc0"
description = "Pyriodicity provides an intuitive and efficient Python implementation of periodicity length detection methods in univariate signals."
license = "MIT"
readme = "README.md"
authors = [
    {name = "Iskander Gaba", email = "iskander@hey.com"},
]
keywords = [
    "period",
    "periodicity",
    "seasonality",
    "period-detection",
    "periodicity-analysis",
    "seasonality-analysis",
    "autoperiod",
    "cfd-autoperiod",
    "robustperiod",
    "sazed",
    "signal-processing",
    "time-series-analysis"
]
requires-python = ">=3.10"
dependencies = [
    "scipy~=1.14",
    "pywavelets~=1.8",
]

[project.urls]
repository = "https://github.com/iskandergaba/pyriodicity"
documentation = "https://pyriodicity.readthedocs.io"

[dependency-groups]
dev = [
    "ruff~=0.14.0",
    "pytest~=8.4.0",
    "pytest-cov~=7.0.0",
    "statsmodels~=0.14.0",
]
docs = [
    "numpydoc~=1.9.0",
    "pydata-sphinx-theme~=0.16.0",
]

[tool.uv]
default-groups = "all"

[tool.ruff.lint]
extend-select = ["E501"]
