[build-system]
requires = ["uv_build~=0.11"]
build-backend = "uv_build"

[project]
name = "pyriodicity"
version = "0.7.0rc0"
description = "Pyriodicity provides an intuitive and efficient Python implementation of periodicity length detection methods in univariate signals."
license = "MIT"
readme = "README.md"
authors = [{ name = "Iskander Gaba", email = "iskander@hey.com" }]
requires-python = ">=3.10"
keywords = [
    "period",
    "periodicity",
    "seasonality",
    "period-detection",
    "periodicity-analysis",
    "seasonality-analysis",
    "autoperiod",
    "cfd-autoperiod",
    "robustperiod",
    "sazed",
    "signal-processing",
    "time-series-analysis"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "scipy~=1.15",
    "pywavelets~=1.8",
    "free-threading~=1.1.0",
]

[project.urls]
Documentation = "https://pyriodicity.readthedocs.io"
Repository = "https://github.com/iskandergaba/pyriodicity"

[dependency-groups]
dev = [
    "ruff~=0.15.0",
    "pytest~=9.0.0",
    "pytest-cov~=7.1.0",
    "statsmodels~=0.14.0",
]
docs = [
    "numpydoc~=1.10.0",
    "pydata-sphinx-theme~=0.17.0",
    "sphinx-autobuild~=2025.08.0",
]

[tool.uv.dependency-groups]
docs = { requires-python = ">=3.12" }

[tool.ruff.lint]
extend-select = ["E501"]
